# revanced-discord-bot

./: .env.example  .gitignore  .gitmodules  .releaserc  CHANGELOG.md  Cargo.toml  Dockerfile  configuration.example.json  configuration.revanced.json  configuration.schema.json  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: docker.yml  release.yml  rust.yml
deploy/: docker-compose.yml
src/: configuration.rs  logger.rs  main.rs  utils.rs
src/api/: client.rs  mod.rs  routing.rs
src/api/model/: api.rs  auth.rs
src/commands/: configuration.rs  misc.rs  mod.rs  moderation.rs  utils.rs
src/configuration/: application.rs
src/db/: database.rs  mod.rs  model.rs
src/events/: guild_member_addition.rs  guild_member_update.rs  interaction.rs  message_create.rs  mod.rs  presence_update.rs  ready.rs  thread_create.rs  thread_update.rs
src/logger/: logging.rs
src/model/: application.rs
src/utils/: autorespond.rs  bot.rs  cure_names.rs  decancer.rs  embed.rs  keep_thread_alive.rs  macros.rs  media_channel.rs  message.rs  message_response.rs  mod.rs  moderation.rs  ocr.rs  poll.rs  role_embed.rs
src/utils/code_embed/: macros.rs  mod.rs  url_parser.rs  utils.rs
