[package]
authors = ["ReVanced"]
description = "The official Discord bot assisting the ReVanced Discord server."
homepage = "https://revanced.app"
license = "GPL-3.0"
name = "revanced-discord-bot"
repository = "https://github.com/revanced/revanced-discord-bot"
version = "2.9.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
bson = "2.4"
serde_with_macros = "3.4"
mongodb = "2.4"
poise = "0.6"
decancer = "3.2"
tokio = { version = "1.26", features = ["rt-multi-thread"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7"
serde_regex = "1.1"
reqwest = { version = "0.12", features = [
	"rustls-tls",
	"json",
], default-features = false }
chrono = "0.4"
dirs = "5.0"
tracing = { version = "0.1", features = [
	"max_level_debug",
	"release_max_level_info",
] }
tracing-subscriber = "0.3"
hmac-sha256 = "1.1"
base64 = "0.22"
parse_duration = "2.1"
